worked on handlebars files

--- a/public/index.css
+++ b/public/index.css
@@ -1,16 +1,22 @@
 .title {
-    padding-top: 50px;
-    padding-left: 550px;
-    padding-right: 550px;
-  }
-  
-  .form-container {
-    padding-left: 600px;
-    padding-right: 600px;
-    padding-bottom: 50%;
-  }
-  
-  .submit-button {
-    padding-left: 300px;
-    padding-right: 300px;
-  }
+  padding-top: 50px;
+  padding-left: 550px;
+  padding-right: 550px;
+}
+
+.form-container {
+  padding-left: 400px;
+  padding-right: 400px;
+  padding-bottom: 100px;
+}
+
+.submit-button {
+  padding-left: 300px;
+  padding-right: 300px;
+}
+
+.columns {
+padding-left: 400px;
+  padding-right: 400px;
+  padding-bottom: 50px;
+}
